--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
--e .
-fastprogress>=0.1.21
-wandb>=0.10.31
+pytest>=5.3.2
+requests>=2.20.0
+hdf5storage>=0.1.18
+coverage>=4.5.4
+requirements-parser==0.2.0
